--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mime": "3",
     "node-pty": "^0.10.1",
     "node-termios": "0.0.13",
-    "terminal.js": "1.0.11"
+    "terminal.js": "1.0.11",
+    "wcwidth": "1.0.1"
   },
   "optionalDependencies": {
     "https-proxy-agent": "^5.0.0",
